<resources>
    <string name="app_name">Bikli</string>
    <string name="activity_registration_home">Дом</string>
    <string name="activity_registration_address_text_view">Улица</string>
    <string name="activity_registration_address_edit_text">Выберите Вашу улицу</string>
    <string name="activity_registration_name_text_view">Имя</string>
    <string name="activity_registration_name_edit_text">Ваше имя</string>
    <string name="activity_registration_phone_text_view">Номер телефона</string>
    <string name="activity_registration_phone_edit_text">Номер телефона</string>
    <string name="registration_toolbar_reg_text_view">Регистрация</string>
    <string name="activity_registration_reg_button">Регистрация</string>
    <string name="activity_registration_next_button">Пропустить</string>
    <string name="activity_registration_floor_edit_text">Этаж</string>
    <string name="activity_registration_flat_edit_text">Номер квартиры</string>
    <string name="activity_registration_floor_text_view">Этаж</string>
    <string name="activity_registration_flat_text_view">Номер квартиры</string>
    <string name="activity_registration_home_switch_compat">Частный Дом</string>
    <string name="item1_home">Рестораны</string>
    <string name="item2_promotions">Акции</string>
    <string name="item3_user">Кабинет</string>
    <string name="item4_history">История</string>
    <string name="item5_cart">Корзина</string>
    <string name="activity_main_window_bikli_food_text">BIKLI-FOOD</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home_fragment_toolbar_pavlodar_text">Павлодар</string>
    <string name="fragment_home_empty_cart_text">Ваша корзина пуста</string>
    <string name="home_fragment_bikli_helper_text">Здесь собраны рестораны с самым высоким рейтингом, уверен ты найдешь то, что нужно именно тебе!</string>
    <string name="fragment_promotion_bikli_helper_text">Все самые горячие акции ЗДЕСЬ!</string>
    <string name="fragment_history_bikli_helper_text">Здесь будет храниться Ваша история заказов</string>
    <string name="home_fragment_for_you_text">Для Вас</string>
    <string name="home_fragment_cafes_text">Рестораны</string>
</resources>