<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bikli_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_marginTop = "32dp"
        android:layout_marginHorizontal="16dp"
        android:padding="16dp"
        android:elevation="2dp">

        <TextView
            android:id="@+id/activity_registration_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_registration_name_text_view"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="4dp"
            />

        <EditText
            android:id="@+id/activity_registration_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/activity_registration_name_edit_text"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:focusedByDefault="false"
            android:defaultFocusHighlightEnabled="false"
            android:lines="1"
            android:singleLine="true"
            android:maxLines="1"
            android:backgroundTint="@color/black"
            android:textCursorDrawable="@color/black"
            />

        <TextView
            android:id="@+id/activity_registration_telephone_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_registration_phone_text_view"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="4dp"
            />

        <EditText
            android:id="@+id/activity_registration_telephone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/activity_registration_phone_edit_text"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:focusedByDefault="false"
            android:defaultFocusHighlightEnabled="false"
            android:lines="1"
            android:singleLine="true"
            android:maxLines="1"
            android:backgroundTint="@color/black"
            android:textCursorDrawable="@color/black"
            />

        <TextView
            android:id="@+id/activity_registration_address_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_registration_address_text_view"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="4dp"
            />

        <EditText
            android:id="@+id/activity_registration_address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/activity_registration_address_edit_text"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:focusedByDefault="false"
            android:defaultFocusHighlightEnabled="false"
            android:lines="1"
            android:singleLine="true"
            android:maxLines="1"
            android:backgroundTint="@color/black"
            android:textCursorDrawable="@color/black"
            />

        <TextView
            android:id="@+id/activity_registration_home_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_registration_home"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="4dp"
            />

        <EditText
            android:id="@+id/activity_registration_home_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/activity_registration_home"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:focusedByDefault="false"
            android:defaultFocusHighlightEnabled="false"
            android:lines="1"
            android:singleLine="true"
            android:maxLines="1"
            android:backgroundTint="@color/black"
            android:textCursorDrawable="@color/black"
            />



    </LinearLayout>

</RelativeLayout>